--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-MONGO_URI=mongodb+srv://CarData:vaibhav123@cluster0.8ep0tmw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://Carrent:mani123@cluster0.oouw7gt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 NODE_ENV=development
 PORT=5000
 RAZORPAY_KEY_ID=your_razorpay_key_id
